k8s/courier-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: courier-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "kurier.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: courier-web-service
            port:
              number: 80
---
